--- a/circle.css
+++ b/circle.css
@@ -1,22 +1,21 @@
-div {
-    display: inline-block;
-    margin-left: 5px;
-    height: 100px;
-    width: 100px;
-    border-radius: 100%;
-    border: 2px solid black;
-
-}
-
-.friend{
-    border: 2px dashed #000000;
+.rectangle{
+  display:block;
+  height:200px;
+  width:300px;
+  position:relative;
+  margin-top:20px;
+  margin-left:525px;
+  z-index: 1;
+  border: 4px solid black;
 }
 
 #circle{
-    border: 4px solid #000000;
-}
-
-div p{
-    text-align: center;
-    margin-top: 40px;
+    position: absolute;
+    border: 4px solid blue;
+    margin-left: 615px;
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    top:255px;
+    z-index: 2;
 }
